tests/baselines/reference/mergeThreeInterfaces2.errors.txt
mergeThreeInterfaces2.ts(4,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergeThreeInterfaces2.ts(14,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergeThreeInterfaces2.ts(30,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergeThreeInterfaces2.ts(31,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergeThreeInterfaces2.ts(42,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergeThreeInterfaces2.ts(43,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergeThreeInterfaces2.ts(56,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
mergeThreeInterfaces2.ts(57,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== mergeThreeInterfaces2.ts (8 errors) ====
    // two interfaces with the same root module should merge
    
    // root module now multiple module declarations
    module M2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export interface A {
            foo: string;
        }
    
        var a: A;
        var r1 = a.foo;
        var r2 = a.bar;
    }
    
    module M2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export interface A {
            bar: number;
        }
    
        export interface A {
            baz: boolean;
        }
    
        var a: A;
        var r1 = a.foo;
        var r2 = a.bar;
        var r3 = a.baz; 
    }
    
    // same as above but with an additional level of nesting and third module declaration
    module M2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export module M3 {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export interface A {
                foo: string;
            }
    
            var a: A;
            var r1 = a.foo;
            var r2 = a.bar;
        }
    }
    
    module M2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export module M3 {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export interface A {
                bar: number;
            }
    
            var a: A;
    
            var r1 = a.foo
            var r2 = a.bar;
            var r3 = a.baz;
        }
    }
    
    module M2 {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export module M3 {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export interface A {
                baz: boolean;
            }
    
            var a: A;
            var r1 = a.foo
            var r2 = a.bar;
            var r3 = a.baz;
        }
    }